# witness

./: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  ruff.toml
src/witness/: __init__.py  indirector.py  poller.py  receipt_end.py  setup.py  start.py
src/witness/commands/: demo.py  start.py
tests/: README.md  one-aid-one-witness.sh
tests/config/keri/cf/main/: sample.json
tests/data/keri/cf/: witness.json
