[project]
name = "witness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Griffin", email = "griffin.kev@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.8.3",
]

[project.scripts]
witness = "witness:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
