[project]
name = "witness"
version = "1.0.0-dev0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Griffin", email = "griffin.kev@gmail.com" } 
]
requires-python = ">=3.12.2"
dependencies = [
    "keri",
    "ruff>=0.8.3",
]

[project.scripts]
witness = "witness:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
keri = { path = "../keripy", editable = true }
