[project]
name = "witness"
version = "1.0.0-dev0"
description = "Witness service for KERI"
readme = "README.md"
authors = [
    { name = "Kevin Griffin", email = "griffin.kev@gmail.com" } 
]
requires-python = ">=3.12.2"
dependencies = [
    "keri",
    "ruff>=0.8.3",
]

[project.scripts]
witness = "witness:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
keri = { git = "https://github.com/weboftrust/keripy", rev = "feat/wit-mbx-repackage" }
